refactor(jpa): 重构数据库访问层性能优化和安全修复
- 优化 AbstractDialectStrategy 中的标识符转义逻辑，使用 StringBuilder 提升性能
- 为 BatchSaveTemplate 添加缓存机制，提高 ID 生成和注解检查效率
- 移除 BulkOperationTemplate 中废弃的批量执行内部方法
- 改进 CacheKeyBuilder 中的 Lambda 捕获参数哈希算法，提升缓存准确性
- 优化 ConditionBuilder 中的字段名验证逻辑，避免字符串分割开销
- 调整 CteSpec 查询限制，防止无限制查询导致性能问题
- 修复 DefaultMyJpaRepository 中软删除逻辑的条件判断顺序
- 为 DeleteSpec 添加明确的副作用文档说明
- 更新 EncryptConverter 移除 Cipher 对象池，避免 JDK GCM 状态复用漏洞
- 优化 EncryptionKeyManager 中的缓存清理顺序，消除竞态窗口
- 修复 EntityFieldExtractor 中嵌入式 ID 的生成策略检查逻辑